--- a/scss/pages/_main-contacto.scss
+++ b/scss/pages/_main-contacto.scss
@@ -26,16 +26,19 @@ main{
                     border: darkgrey solid 1px;
                     resize: none;
                     padding-left: 2px;
+                    width: 40ch;
                 }
                 #email{
                     border: darkgrey solid 1px;
                     resize: none;
                     padding-left: 2px;
+                    width: 40ch;
                 }
                 #mensaje{
                     border: darkgrey solid 1px;
                     resize: none;
                     padding-left: 2px;
+                    width: 40ch;
                 }
                 input{
                     font-size: 1.2vw;
