--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -119,16 +119,21 @@
             // gap: 1em;
         }
         .nosotros{
-            // display: grid;
-            @include grid(center, 1,1fr,2,1em,80%);
-            // justify-content: center;
-            // grid-template-columns: 1fr;
-            // grid-template-rows: repeat(2, auto);
-            // gap: 1em;
-            // width: 80%;
-            align-items: center;
-            .nosotros-p {
+            display: flex;
+            position: relative;
+            .nosotros-p{
+                display: flex;
+                position: absolute;
+                padding: 2px;
+                background-color: transparent;
+                color:floralwhite;
+                text-shadow: rgb(10, 10, 10) 1px 0 10px;
                 font-size: 5vw;
+            }
+            .nosotros-imagenes{
+                img{
+                    mask-image: linear-gradient(to right, rgba(155, 151, 151, .8), rgba(155, 151, 151, 0.6));
+                }
             }
         }
         .contacto{
