--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -34,7 +34,7 @@
             .container-fluid{
                 padding-left: 0;
                 .navbar-brand {
-                    font-size: 9vw;
+                    font-size: 40px;
                 }
                 div{
                     .navbar-nav {
@@ -48,7 +48,7 @@
                         --bs-gutter-x: 0;
                         padding-left: calc(var(--bs-gutter-x) *0);
                         .nav-list {
-                            font-size: 2.5vw;
+                            font-size: 12.5px;
                         }
                     }
                 }
@@ -57,7 +57,7 @@
     }
     main{
         h1{
-            font-size: 8vw;
+            font-size: 28px;
         }
         .imagen-con-texto{
             .portada-mobile{
