--- a/scss/utilities/_globals.scss
+++ b/scss/utilities/_globals.scss
@@ -8,10 +8,11 @@ main {
         font-family: 'Satisfy', cursive;
         font-size: 5vw;
         color: rgb(85, 67, 67);
-        padding: 6vw 0;
+        padding: 7vw 0;
         background-color: transparent;
         text-align: center;
         animation: animate__pulse;
         animation-duration: 5s;
+        margin-bottom: 0;
     }
 }
