--- a/css/main.css
+++ b/css/main.css
@@ -25,11 +25,12 @@ main h1 {
   font-family: "Satisfy", cursive;
   font-size: 5vw;
   color: rgb(85, 67, 67);
-  padding: 6vw 0;
+  padding: 7vw 0;
   background-color: transparent;
   text-align: center;
   animation: animate__pulse;
   animation-duration: 5s;
+  margin-bottom: 0;
 }
 
 header {
@@ -62,6 +63,8 @@ header nav .container-fluid .navbar-toggler .navbar-toggler-icon {
 header nav .container-fluid div .navbar-nav {
   gap: 20px;
   align-items: flex-end;
+  height: 340px;
+  justify-content: space-evenly;
 }
 header nav .container-fluid div .navbar-nav .nav-list {
   font-family: Arial, Helvetica, sans-serif;
@@ -93,8 +96,8 @@ header nav .container-fluid div .navbar-nav .nav-list:hover {
   color: antiquewhite;
   position: relative;
   bottom: 10vw;
-  font-size: 3.2vw;
-  width: 80%;
+  font-size: 40px;
+  text-shadow: rgb(255, 255, 255) 10px 0 10px;
 }
 .portada .boton-productos {
   border: 3px solid grey;
@@ -165,7 +168,6 @@ main .fotos {
   gap: 1em;
   width: 90%;
   grid-template-areas: "img1 img1 img9 img3" "img4 img2 img9 img3" "img4 img6 img7 img7" "img8 img8 img5 img10";
-  padding-top: 20px;
 }
 main .fotos img {
   width: 100%;
@@ -319,10 +321,13 @@ footer {
   background-color: rgb(248, 248, 236);
   padding: 50px 0px 50px 0px;
   display: flex;
+  position: relative;
   justify-content: center;
 }
 footer a {
   display: block;
+  top: 30px;
+  position: absolute;
   white-space: nowrap;
   border-right: 4px solid;
   font-family: "Satisfy", cursive;
@@ -337,6 +342,16 @@ footer a {
 }
 footer a img {
   height: 40px;
+}
+footer p {
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  font-size: 8px;
+  bottom: 0.01px;
+  left: 1px;
+  margin-bottom: 2px;
+  color: gray;
 }
 
 @keyframes typing {
@@ -364,6 +379,9 @@ footer a img {
   }
   header .navbar-expand-lg .container-fluid .navbar-collapse .navbar-nav {
     background-color: transparent;
+    height: 100px;
+    align-items: center;
+    padding-right: 30px;
   }
   main .imagen-con-texto .portada-mobile {
     visibility: hidden;
@@ -375,11 +393,10 @@ footer a img {
     padding-left: 0;
   }
   header nav .container-fluid .navbar-brand {
-    font-size: 40px;
+    font-size: 9vw;
   }
   header nav .container-fluid div .navbar-nav {
     position: absolute;
-    top: 15vw;
     width: 100%;
     padding: 0 25px 0px 0px;
     margin: 0;
@@ -389,19 +406,19 @@ footer a img {
     padding-left: calc(var(--bs-gutter-x) * 0);
   }
   header nav .container-fluid div .navbar-nav .nav-list {
-    font-size: 12.5px;
+    font-size: 15px;
   }
   main h1 {
-    font-size: 28px;
+    font-size: 5.5vw;
   }
-  main .imagen-con-texto .portada-mobile {
+  .portada .imagen-con-texto .portada-mobile {
     visibility: hidden;
     display: none;
   }
-  main .imagen-con-texto p {
-    font-size: 3.5vw;
+  .portada .imagen-con-texto p {
+    font-size: 22px;
   }
-  main .boton-productos {
+  .portada .boton-productos {
     font-size: 4vw;
   }
   main .catalogo-general {
@@ -432,7 +449,6 @@ footer a img {
     gap: 1em;
     width: 90%;
     grid-template-areas: "img1" "img2" "img3" "img4" "img5" "img6" "img7" "img8" "img9" "img10";
-    padding-top: 20px;
   }
   main .nosotros {
     display: flex;
@@ -468,7 +484,7 @@ footer a img {
     font-size: 2.5vw;
   }
   footer a {
-    font-size: 5.5vw;
+    font-size: 28px;
   }
   footer a img {
     height: 30px;
@@ -476,17 +492,20 @@ footer a img {
 }
 @media screen and (max-width: 600px) {
   header nav .container-fluid .navbar-toggler .navbar-toggler-icon {
-    font-size: 15px;
+    font-size: 25px;
   }
-  main .imagen-con-texto .portada-responsive {
+  .portada .imagen-con-texto .portada-responsive {
     visibility: hidden;
     display: none;
   }
-  main .imagen-con-texto .portada-mobile {
+  .portada .imagen-con-texto .portada-mobile {
     visibility: visible;
     display: block;
   }
-  main .boton-productos a {
+  .portada .imagen-con-texto p {
+    font-size: 14px;
+  }
+  .portada .boton-productos a {
     font-size: 15px;
   }
   main .catalogo-general .catalogo div .carousel-inner {
@@ -512,6 +531,12 @@ footer a img {
   }
   main .nosotros .nosotros-imagenes img {
     mask-image: linear-gradient(to right, rgba(155, 151, 151, 0.8), rgba(155, 151, 151, 0.6));
+  }
+  footer a {
+    font-size: 5.5vw;
+  }
+  footer a img {
+    height: 6vw;
   }
 }
 
