--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -28,6 +28,8 @@ header {
                 .navbar-nav {
                     gap: 20px;
                     align-items: flex-end;
+                    height: 340px;
+                    justify-content: space-evenly;
                     .nav-list {
                         font-family: Arial, Helvetica, sans-serif;
                         text-decoration: none;
