--- a/scss/pages/_main-index.scss
+++ b/scss/pages/_main-index.scss
@@ -16,8 +16,8 @@
             color: antiquewhite;
             position: relative;
             bottom: 10vw;
-            font-size: 3.2vw;
-            width: 80%;
+            font-size: 40px;
+            text-shadow: rgb(255, 255, 255) 10px 0 10px;
         }
     }
     .boton-productos {
